--- a/src/app/pages/constructfy/createProject/createProject.html
+++ b/src/app/pages/constructfy/createProject/createProject.html
@@ -1,4 +1,151 @@
+    <div class="row">
+        <div class="col-md-12"
+             ba-panel
+             ba-panel-title="PROJECT DATA"
+             ba-panel-class="with-scroll">
 
-<div ba-panel>
-  test....
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <label for="inputFirstName">Project Title</label>
+                        <input type="text" class="form-control" id="inputFirstName" placeholder="Project Title">
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <label for="inputLastName">Project Location</label>
+                        <input type="text" class="form-control" id="inputLastName" placeholder="Project Location">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="form-group" >
+                        <label for="inputFirstName">Start date</label>
+                        <input type="date" ng-model="startDate" class="form-control" />
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <label for="inputLastName">Completion date</label>
+                        <input type="date" ng-model="completionDate" class="form-control" />
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="form-group">
+                        <label for="inputFirstName">Project duration</label>
+                        <input type="text"  readonly class="form-control" ng-model="projectDuration" placeholder="In yrs month weeks and days">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+<!-- project description -->
+  <div class="row">
+    <div class="col-md-12"
+         ba-panel
+         ba-panel-title="PROJECT DESCRIPTION"
+         ba-panel-class="with-scroll">
+
+   
+        <div class="row" >
+            <div class="horizontal-scroll">
+                <table class="table table table-bordered">
+                    <thead>
+                        <tr class="black-muted-bg">
+                            <th class="align-right">Description</th>
+                            <th class="align-right" style="padding-top :10px;text-align: center;">Yes/No</th>
+                            <th class="align-right" style="padding-top :10px;text-align: center;">Qty</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr >
+                            <td class="align-right"  style="padding-top :10px;text-align: center;">Foundation</td>
+                            <td class="align-right"  style="padding-top :10px;text-align: center;"><ba-switcher switcher-style="primary" switcher-value="vm.switches.s1"></ba-switcher></td>
+                            <td class="align-left"   style="padding-top :10px;text-align: center;">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="align-right" style="padding-top :10px;text-align: center;">Basement</td>
+                            <td class="align-right" style="padding-top :10px;text-align: center;"><ba-switcher switcher-style="primary" switcher-value="vm.switches.s1"></ba-switcher></td>
+                            <td class="align-left" style="padding-top :10px;text-align: center;">
+                                <input type="text" class="form-control" id="inputFirstName" placeholder="No. of floors" maxlength="3">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="align-right" style="padding-top :10px;text-align: center;">Podium</td>
+                            <td class="align-right" style="padding-top :10px;text-align: center;"><ba-switcher switcher-style="primary" switcher-value="vm.switches.s1"></ba-switcher></td>
+                            <td class="align-left" style="padding-top :10px;text-align: center;"><input type="text" class="form-control" id="inputFirstName" placeholder="No. of floors" maxlength="3"> </td>
+                        </tr>
+                        <tr>
+                            <td class="align-right" style="padding-top :10px;text-align: center;">Mezanine</td>
+                            <td class="align-right" style="padding-top :10px;text-align: center;"><ba-switcher switcher-style="primary" switcher-value="vm.switches.s1"></ba-switcher></td>
+                            <td class="align-left" style="padding-top :10px;text-align: center;">
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+    </div>
+</div>  
+  </div>
+<!-- project description end -->
+
+<!-- Tower Block description -->
+<div class="row">
+    <div class="col-md-12"
+         ba-panel
+         ba-panel-title="Tower/Block"
+         ba-panel-class="with-scroll">
+  
+            <!-- tree -->
+            <div class="row">
+                <div class="col-sm-7">
+                    <table ui-tree id="tree-root" class="table table-responsive table-bordered" border="0">
+                        <thead>
+                            <tr class="black-muted-bg">
+                                <th style="align-content:center">
+                                    <a class="btn btn-primary btn-xs" ng-click="newTower()"><span class="glyphicon glyphicon-plus"></span>  Add more </a> 
+                                </th>
+                                <th>
+                                        <input class="form-control input-sm" ng-model="node.title" type="text" placeholder="Enter Tower/Block" style="padding-top :10px;text-align: left;">
+                                </th>
+                                <th>
+                                     <a class="pull-right btn btn-primary btn-xs" data-nodrag ng-click="newFloor()" style="margin-right: 8px;">
+                                            Floor <span class="glyphicon glyphicon-plus"></span>
+                                      </a>
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody ui-tree-nodes ng-model="data">
+                            <tr ng-repeat="node in data" ui-tree-node >
+                                <td>
+                                    <div style="margin-top:10px">
+                                        <i class="glyphicon glyphicon-resize-vertical"></i>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="form-group" style="margin-top:10px">
+                                        <input class="form-control input-sm" ng-model="node.title" type="text" style="padding-top :10px;">
+                                    </div>
+                                </td>
+                                <td style="margin-top:10px">
+                                    <div style="margin-top:10px">
+                                        <a class="pull-right btn btn-danger btn-xs" data-nodrag ng-click="remove(this)" style="margin-right: 8px;">
+                                            <span class="glyphicon glyphicon-remove"></span>
+                                        </a>
+                                    </div>
+                               </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <!--tree end-->
+      
+    </div>
 </div>
+<!-- Tower Block end -->
