--- a/src/app/pages/authSignIn/authSignIn.html
+++ b/src/app/pages/authSignIn/authSignIn.html
@@ -1,8 +1,8 @@
 <div class="login" ng-controller="authSignInCtrl as signInVm">
   <main class="auth-main">
     <div class="auth-block">
-      <h1>Sign in to Blur Admin</h1>
-      <a ui-sref="authSignUp" class="auth-link">New to Blur Admin? Sign up!</a>
+      <h1>Sign in to Constructfy</h1>
+      <a ui-sref="authSignUp" class="auth-link">New to Constructfy? Sign up!</a>
 
       <form class="form-horizontal" ng-submit="signInVm.logar()">
         <div class="form-group">
