--- a/src/app/pages/constructfy/createProject/createProject.html
+++ b/src/app/pages/constructfy/createProject/createProject.html
@@ -150,3 +150,173 @@
     </div>
 </div>
 <!-- Tower Block end -->
+
+
+<!-- External works description -->
+<div class="row">
+    <div class="col-md-12"
+         ba-panel
+         ba-panel-title="External works"
+         ba-panel-class="with-scroll">
+
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="form-group">
+                            <label for="inputFirstName">Works</label>
+                            <select class="form-control" ng-options='t.name for t in externalSelect' ng-model="choice"
+                                    ng-change='selectedTemplate(t.id)'></select>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="form-group" ng-show="customText">
+                            <label for="inputFirstName">Custom</label>
+                            <input type="text" class="form-control" id="inputLastName" placeholder="Last Name">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="form-group">
+                            <label for="inputFirstName">Qty</label>
+                            <input type="email" class="form-control" id="inputEmail" placeholder="Qty" />
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="form-group">
+                            <label for="inputWebsite">Units</label>
+                            <select class="form-control" >
+                                <option>m</option>
+                                <option>sq.ft</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <button class="btn btn-primary btn-xs" ng-click="addUser()">Add External works</button>
+                </div>
+            </div>
+           
+     
+            <div class="col-sm-6">
+                <table class="table table-bordered table-hover table-condensed">
+                    <tr>
+                        <td></td>
+                        <td>Name</td>
+                        <td>QTY</td>
+                        <td>Units</td>
+                        <td>Actions</td>
+                    </tr>
+                    <tr ng-repeat="user in users" class="editable-row">
+                        <td>
+                            {{$index}}
+                        </td>
+                        <td class="select-td">
+                            <span editable-select="user.status" e-name="status" e-form="rowform" e-selectpicker
+                                  e-ng-options="s.value as s.text for s in statuses">
+                                {{ showStatus(user) }}
+                            </span>
+                        </td>
+                        <td>
+                            <span editable-text="user.name" e-name="name" e-form="rowform" e-required>
+                                {{ user.name || 'empty' }}
+                            </span>
+                        </td>
+                        <td class="select-td">
+                            <span editable-select="user.group" e-name="group" onshow="loadGroups()" e-form="rowform" e-selectpicker
+                                  e-ng-options="g.id as g.text for g in groups">
+                                {{ showGroup(user) }}
+                            </span>
+                        </td>
+                        <td>
+                            <form editable-form name="rowform" ng-show="rowform.$visible" class="form-buttons form-inline"
+                                  shown="inserted == user">
+                                <button type="submit" ng-disabled="rowform.$waiting" class="btn btn-primary editable-table-button btn-xs">
+                                    Save
+                                </button>
+                                <button type="button" ng-disabled="rowform.$waiting" ng-click="rowform.$cancel()" class="btn btn-default editable-table-button btn-xs">
+                                    Cancel
+                                </button>
+                            </form>
+                            <div class="buttons" ng-show="!rowform.$visible">
+                                <button class="btn btn-primary editable-table-button btn-xs" ng-click="rowform.$show()">Edit</button>
+                                <button class="btn btn-danger editable-table-button btn-xs" ng-click="removeUser($index)">Delete</button>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+
+      </div>
+</div>
+<!-- External works end -->
+
+    <!-- Division/BILL -->
+    <div class="row">
+        <div class="col-md-12"
+             ba-panel
+             ba-panel-title="Division/Bill"
+             ba-panel-class="with-scroll">
+         
+            <div class="row">
+                <div class="col-md-4">
+                    <label class="checkbox-inline custom-checkbox nowrap">
+                        <input type="checkbox" id="inlineCheckbox01" value="option1">
+                        <span>Include 16 division(1. general 2.site constru..)</span>
+                    </label>
+                </div>
+            </div>
+            <br />
+            <div class="row">
+                    <div class="col-sm-6">
+                        <table class="table table-bordered table-hover table-condensed">
+                            <tr>
+                                <td></td>
+                                <td>Bill</td>
+                 
+                                <td>Actions</td>
+                            </tr>
+                            <tr ng-repeat="user in users" class="editable-row">
+                                <td>
+                                    {{$index}}
+                                </td>
+                                <td class="select-td">
+                                    <span editable-select="user.status" e-name="status" e-form="rowform" e-selectpicker
+                                          e-ng-options="s.value as s.text for s in statuses">
+                                        {{ showStatus(user) }}
+                                    </span>
+                                </td>
+                                <td>
+                                    <form editable-form name="rowform" ng-show="rowform.$visible" class="form-buttons form-inline"
+                                          shown="inserted == user">
+                                        <button type="submit" ng-disabled="rowform.$waiting" class="btn btn-primary editable-table-button btn-xs">
+                                            Save
+                                        </button>
+                                        <button type="button" ng-disabled="rowform.$waiting" ng-click="rowform.$cancel()" class="btn btn-default editable-table-button btn-xs">
+                                            Cancel
+                                        </button>
+                                    </form>
+                                    <div class="buttons" ng-show="!rowform.$visible">
+                                        <button class="btn btn-primary editable-table-button btn-xs" ng-click="rowform.$show()">Edit</button>
+                                        <button class="btn btn-danger editable-table-button btn-xs" ng-click="removeUser($index)">Delete</button>
+                                    </div>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+            </div>
+       
+         </div>
+    </div>
+    <!-- Division/BILL end -->
+
+
+<!--save button-->
+ <div class="row">
+     <button type="submit" class="btn btn-primary" ng-click="viewProject()">Create new project</button>
+ </div>
+<br />
+<!--save button end-->
+
