added summary page

--- a/src/app/pages/constructfy/createProject/createProject.html
+++ b/src/app/pages/constructfy/createProject/createProject.html
@@ -307,7 +307,10 @@
                         </table>
                     </div>
             </div>
-       
+            <br/>
+            <div class="row">
+                <button class="btn btn-primary btn-xs" ng-click="addBills()">Add Bills</button>
+            </div>
          </div>
     </div>
     <!-- Division/BILL end -->
