--- a/src/app/pages/constructfy/viewSummary/viewSummary.html
+++ b/src/app/pages/constructfy/viewSummary/viewSummary.html
@@ -5,7 +5,90 @@
              ba-panel-class="with-scroll">
 
             <div class="row">
-            under const..
+                <div class="col-sm-12">
+                    <table class="table table-bordered table-hover table-condensed">
+                        <tr class="black-muted-bg">
+                            <th>DIVISION NO.</th> 					  	  	  	   	      	                    	          
+                            <th>DESCRIPTION OF THE WORK	UNIT</th>
+                            <th>QTY</th>
+                            <th>UNIT RATE(RS)</th>
+                            <th>TOTAL AMOUNT(RS)</th>
+                            <th>% AGE</th>
+                            <th>CONTRACT BREAKDOWN QTY</th>
+                            <th>WORKDONE P'AGE(%)</th>
+                            <th>WORKDONE ITEM(DATE)</th>
+                            <th>WORKDONE BREAKDOWN QTY</th>
+                            <th>WORKDONE AMOUNT (RS)</th>
+                            <th>WORK DONE TOTAL % AGE</th>
+                            <th></th>
+                        </tr>
+                        <tr class="editable-row">
+                            <td>01</td>
+                            <td>DIVISION 01 - GENERAL REQUIREMENTS</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>
+                                <div class="buttons">
+                                    <button class="btn btn-primary  btn-xs" ng-click="viewDetail()">detail</button>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr class="editable-row">
+                            <td>02</td>
+                            <td>DIVISION 02 - SITE CONSTRUCTION</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>
+                                <div class="buttons">
+                                    <button class="btn btn-primary  btn-xs" ng-click="viewDetail()">detail</button>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr class="editable-row">
+                            <td colspan="10">TOTAL FOR STRCTURAL, ARCHITECTURAL & EXTERNAL  WORKS</td>
+                            <td></td>
+                            <td></td>
+                            <td>
+                               
+                            </td>
+                        </tr>
+                        <tr class="editable-row">
+                            <td>15</td>
+                            <td>DIVISION 15 - MECHANICAL WORKS</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>
+                                <div class="buttons">
+                                    <button class="btn btn-primary  btn-xs" ng-click="viewDetail()">detail</button>
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
             </div>
           
         </div>
