--- a/src/app/pages/constructfy/billOfQty/billOfQty.html
+++ b/src/app/pages/constructfy/billOfQty/billOfQty.html
@@ -1,7 +1,7 @@
     <div class="row">
         <div class="col-md-12"
              ba-panel
-             ba-panel-title="View Summary"
+             ba-panel-title="billOfQty"
              ba-panel-class="with-scroll">
 
             <div class="row">
