--- a/src/app/pages/constructfy/viewProject/viewProject.html
+++ b/src/app/pages/constructfy/viewProject/viewProject.html
@@ -37,7 +37,7 @@
                             <td>
                                 <div class="buttons" >
                                     <button class="btn btn-primary  btn-xs" ng-click="viewProject()">view</button>
-                                    <button class="btn btn-primary  btn-xs" ng-click="viewSummary()">summary</button>
+                                    <button class="btn btn-primary  btn-xs" ng-click="viewBOQ()">BOQ</button>
                                 </div>
                             </td>
                         </tr>
