--- a/src/app/pages/constructfy/viewProject/viewProject.html
+++ b/src/app/pages/constructfy/viewProject/viewProject.html
@@ -1,7 +1,7 @@
     <div class="row">
         <div class="col-md-12"
              ba-panel
-             ba-panel-title="View Projects"
+             ba-panel-title="Projects"
              ba-panel-class="with-scroll">
 
             <div class="row">
