Added reports page

--- a/src/app/pages/constructfy/viewProject/viewProject.html
+++ b/src/app/pages/constructfy/viewProject/viewProject.html
@@ -4,6 +4,10 @@
              ba-panel-title="Projects"
              ba-panel-class="with-scroll">
 
+            <div class="add-row-editable-table">
+                <button class="btn btn-primary" ng-click="viewProject()">Add Project</button>
+            </div>
+
             <div class="row">
                 <div class="col-sm-12">
                     <table class="table table-bordered table-hover table-condensed">
@@ -36,7 +40,7 @@
                             <td></td>
                             <td>
                                 <div class="buttons" >
-                                    <button class="btn btn-primary  btn-xs" ng-click="viewProject()">view</button>
+                                    <button class="btn btn-primary  btn-xs" ng-click="viewProject()">Edit</button>
                                     <button class="btn btn-primary  btn-xs" ng-click="viewBOQ()">BOQ</button>
                                 </div>
                             </td>
